fixied vertical align with flex

--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -11,7 +11,7 @@
         @fourthColor: #58a4b0;
         @black: #1B1B1E;
         /* variables */
-        
+         
         .container {
             font-family: Helvetica, sans-serif;
             position: relative;
@@ -22,11 +22,27 @@
             text-align: center;
             color: @secondaryColor;
             padding-top: 2em;
+            padding: 5em 0 5em 0;
         }
-        .info h1 {
-            margin: 0;
-            padding: 0;
+        .info {
+            display: flex; 
+            flex-direction: column;  
+            align-items: center;
         }
+        .para {
+            display: flex;
+            flex-direction: column;    
+            align-items: center;   
+        }
+        
+        // .vert-center {
+        //     margin: auto;
+        // }
+        
+        // .info h1 {
+        //     margin: 0;
+        //     padding: 0;
+        // }
         #pic {
             height: 18em;
             width: 14em;
