--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -2,7 +2,7 @@
 
 @import '../src/viewcontrols/home/home.vc.less';
 
-        #left {
+ #left {
             float: left;
             font-weight: bold;
             font-size: 1.5em;
@@ -21,7 +21,7 @@
         }      
         .nav li {
             list-style: none;
-            display: inline-block;
+            display: inline;
             margin: -0.2em 2em 0 2em;
             text-transform: uppercase;
             vertical-align: middle;
